--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&family=Purple+Purse&display=swap'); */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
